added thumbnail img

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -6,6 +6,14 @@
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
   <meta charset="utf-8" />
   <title>Pshare</title>
+
+  <meta name="title" property="og:title" content="Pshare"></meta>
+  <meta property="og:type" content="Article"></meta>
+  <meta name="image" property="og:image" content="/pshare-login.png"></meta>
+  <meta name="description" property="og:description" content="A pixel perfect Twitter clone that allows users to share profiles, post tweets, and leave likes and comments."></meta>
+  <meta name="author" content="Eunice Park"></meta>
+  <meta property='og:url' content='https://pshare-app.herokuapp.com/'/>
+
 </head>
 
 <body>
