--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -9,7 +9,7 @@
 
   <meta name="title" property="og:title" content="Pshare"></meta>
   <meta property="og:type" content="Article"></meta>
-  <meta name="image" property="og:image" content="https://ibb.co/fSrtbQ2"></meta>
+  <meta name="image" property="og:image" content="https://pshare-app.s3.amazonaws.com/1-pshare-login.png"></meta>
   <meta name="description" property="og:description" content="A pixel perfect Twitter clone that allows users to share profiles, post tweets, and leave likes and comments."></meta>
   <meta name="author" content="Eunice Park"></meta>
   <meta property='og:url' content='https://pshare-app.herokuapp.com/'/>
