--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
-  <meta charset="utf-8" />
-  <title>Pshare</title>
-
-  <meta name="title" property="og:title" content="Pshare"></meta>
-  <meta property="og:type" content="Article"></meta>
-  <meta name="image" property="og:image" content="https://pshare-app.s3.amazonaws.com/1-pshare-login.png"></meta>
-  <meta name="description" property="og:description" content="A pixel perfect Twitter clone that allows users to share profiles, post tweets, and leave likes and comments."></meta>
-  <meta name="author" content="Eunice Park"></meta>
-  <meta property='og:url' content='https://pshare-app.herokuapp.com/'/>
-
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
+    
+    <meta name="description" content="A pixel perfect Twitter clone that allows users to share profiles, post tweets, and leave likes and comments." />
+    <meta name="title" property="og:title" content="Pshare" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://pshare-app.s3.amazonaws.com/1-pshare-login.png" />
+    <meta name="description" property="og:description" content="A pixel perfect Twitter clone that allows users to share profiles, post tweets, and leave likes and comments." />
+    <meta property='og:url' content='https://pshare-app.herokuapp.com/'/>
+    <meta name="author" content="Eunice Park"></meta>
+    <title>Pshare</title>
+    
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
