updating url img

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -11,9 +11,9 @@
     <meta name="image" property="og:image" content="https://pshare-app.s3.amazonaws.com/1-pshare-login.png" />
     <meta name="description" property="og:description" content="A pixel perfect Twitter clone that allows users to share profiles, post tweets, and leave likes and comments." />
     <meta property='og:url' content='https://pshare-app.herokuapp.com/'/>
-    <meta name="author" content="Eunice Park"></meta>
+    <meta name="author" content="Eunice Park" />
     <title>Pshare</title>
-    
+
   </head>
   <body>
     <div id="root"></div>
